# example-dependency

./: CMakeLists.txt  README.md  sekrit-sos.cpp
include/: sos.h
